; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_string.c_validate_codepage.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_string.c_validate_codepage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"invalid codepage %u\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @validate_codepage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @validate_codepage(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @CP_ACP, align 8
  %6 = icmp ne i64 %4, %5
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = call i32 @IsValidCodePage(i64 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %7
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @WARN(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %12)
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %7, %1
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @IsValidCodePage(i64) #1

declare dso_local i32 @WARN(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
